--- a/TEQClient/teqclient/package.json
+++ b/TEQClient/teqclient/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^3.5.12",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
