--- a/TEQServer/requirements.txt
+++ b/TEQServer/requirements.txt
@@ -2,3 +2,5 @@ djangorestframework==3.15.2
 Django==5.1.3
 django_cors_headers==4.6.0
 mongoengine==0.29.1
+python-decouple==3.8
+dj-database-url==2.3.0
