--- a/TEQServer/requirements.txt
+++ b/TEQServer/requirements.txt
@@ -4,3 +4,4 @@ django_cors_headers==4.6.0
 mongoengine==0.29.1
 python-decouple==3.8
 dj-database-url==2.3.0
+django-rest-framework-mongoengine==3.4.1
