--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ cython_debug/
 /TEQClient/booksaw-1.0.0
 /TEQClient/.idea
 /SimilarityMicroservice/Models
+/Microservices/SimilarityMicroservice/.idea
