--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,4 @@ cython_debug/
 /TEQClient/.idea
 /SimilarityMicroservice/Models
 /Microservices/SimilarityMicroservice/.idea
+/Microservices/CppRunnerMicroservice/.idea
