--- a/TEQClient/teqclient/package.json
+++ b/TEQClient/teqclient/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ace-builds": "^1.40.1",
     "vue": "^3.5.12",
     "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5"
