--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ cython_debug/
 /Microservices/SimilarityMicroservice/.idea
 /Microservices/CppRunnerMicroservice/.idea
 /Microservices/PythonRunnerMicroservice/.idea
+/Microservices/JavaRunnerMicroservice/.idea
