Added handling tasks with celery

--- a/TEQServer/.env.example
+++ b/TEQServer/.env.example
@@ -2,3 +2,5 @@ DJANGO_SECRET_KEY=django-insecure-
 SQL_DATABASE_URL=url for db from https://pypi.org/project/dj-database-url/
 NOSQL_DATABASE_URL=url for db from https://docs.mongoengine.org/guide/connecting.html
 MODE=development|production
+SERVICE_GATEWAY=
+CELERY_BROKER_URL=
