Added removing categories. Test refreshing. Changed default values

--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,4 @@ cython_debug/
 /Microservices/CppRunnerMicroservice/.idea
 /Microservices/PythonRunnerMicroservice/.idea
 /Microservices/JavaRunnerMicroservice/.idea
+/.idea
