--- a/TEQServer/.env.example
+++ b/TEQServer/.env.example
@@ -4,3 +4,4 @@ NOSQL_DATABASE_URL=url for db from https://docs.mongoengine.org/guide/connecting
 MODE=development|production
 SERVICE_GATEWAY=
 CELERY_BROKER_URL=
+ORIGIN=
